[gd_scene load_steps=2 format=3 uid="uid://qu0lrw5kk8s7"]

[ext_resource type="Script" uid="uid://xjsutygmal3p" path="res://Player/GUI/kill_counter.gd" id="1_kill"]

[node name="KillCounter" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_bottom = 60.0
grow_horizontal = 0
script = ExtResource("1_kill")

[node name="KillLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 110.0
offset_bottom = 30.0
text = "0"
horizontal_alignment = 2

[node name="ComboLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 30.0
offset_right = 110.0
offset_bottom = 55.0
text = "10x COMBO!"
horizontal_alignment = 2

[node name="ComboTimer" type="Timer" parent="."]

[connection signal="timeout" from="ComboTimer" to="." method="_on_combo_timer_timeout"]
